--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
  <body>
    <h1>HTML</h1>
    <p>Hyper Text Markup Language</p>
+  <script>
+document.write("<p>JavaScriptTest</p>");
+</script>
  </body>
 </html>
