--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ document.write("<p>JavaScriptTest</p>");
 	const url = 'https://script.google.com/macros/s/AKfycbxVRb5kOZWxAy5eJfKYqmYwTk3ciumUAQ9DKPz5RptvTbS4ULJeIsKvBOpkmpRBVTg/exec';
 	const options = {
   		method: 'POST',
-  		headers: {
-    			'Content-Type': 'application/json'
-  		},
+//  		headers: {
+//    			'Content-Type': 'application/json'
+//  		},
   		body: JSON.stringify({
    			"id": "aoki",
    			"mode": "read",
