--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ document.write("<p>JavaScriptTest</p>");
   		})
 	}
 	const ret= fetchData(url, options);  
-	document.write("<p>"+ret.result+"</p>");
+	document.write("<p>res="+ret.result+"</p>");
+	document.write("<p>txt="+ret.textContent+"</p>");
 	document.write("<p>JavaScriptTest3</p>");
 </script>
 
