--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ document.write("<p>JavaScriptTest</p>");
 	const ret= fetchData(url, options);  
 	document.write("<p>res="+ret.result+"</p>");
 	document.write("<p>txt="+ret.textContent+"</p>");
+	document.write("<p>ret="+ret+"</p>");
 	document.write("<p>JavaScriptTest3</p>");
 </script>
 
