--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ document.write("<p>JavaScriptTest</p>");
 	document.write("<p>res="+ret.result+"</p>");
 	document.write("<p>txt="+ret.textContent+"</p>");
 	document.write("<p>ret="+ret+"</p>");
+	document.write("<p>ret[0]="+ret[0]+"</p>");
 	document.write("<p>JavaScriptTest3</p>");
 </script>
 
