--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ document.write("<p>JavaScriptTest</p>");
 	document.write("<p>txt="+ret.textContent+"</p>");
 	document.write("<p>ret="+ret+"</p>");
 	document.write("<p>ret[0]="+ret[0]+"</p>");
-	document.write("<p>JavaScriptTest3</p>");
+	document.write("<p>strret="+JSON.stringify(ret)+"</p>");
+  	document.write("<p>JavaScriptTest3</p>");
 </script>
 
  </body>
