--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ document.write("<p>JavaScriptTest</p>");
    			"value": "1"
   		})
 	}
-	const ret= async fetchData(url, options);  
+	const ret= fetchData(url, options);  
 	document.write("<p>res="+ret.result+"</p>");
 	document.write("<p>txt="+ret.textContent+"</p>");
 	document.write("<p>ret="+ret+"</p>");
