--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ fetch(url, options)
       console.log(data)
       localStorage.setItem('localData', dataStr)
   })
+  	document.write("<p>JavaScriptTest④</p>");
 	
 </script>
 
