--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@ fetch(url, options)
     const dataStr = JSON.stringify(data)
       console.log(data)
       localStorage.setItem('localData', dataStr)
+  	document.write("<p>dataStr</p>")
+  	document.write("<p>"+dataStr+"</p>")
+  	document.write("<p>end</p>")
   })
-  	document.write("<p>JavaScriptTest4</p>");
+  	document.write("<p>JavaScriptTest5</p>");
 	
 </script>
 
