--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ document.write("<p>JavaScriptTest</p>");
   </script>
 
   <script>
-	document.write("<p>JavaScriptTest2</p>");
+/*
+	  document.write("<p>JavaScriptTest2</p>");
 	const url = 'https://script.google.com/macros/s/AKfycbxVRb5kOZWxAy5eJfKYqmYwTk3ciumUAQ9DKPz5RptvTbS4ULJeIsKvBOpkmpRBVTg/exec';
 	const options = {
   		method: 'POST',
@@ -42,8 +43,22 @@ document.write("<p>JavaScriptTest</p>");
 	document.write("<p>ret[0]="+ret[0]+"</p>");
 	document.write("<p>strret="+JSON.stringify(ret)+"</p>");
   	document.write("<p>JavaScriptTest3</p>");
-</script>
+*/
+  </script>
 <script>
+	document.write("<p>Nowloading GAS data</p>");
+	const url = 'https://script.google.com/macros/s/AKfycbxVRb5kOZWxAy5eJfKYqmYwTk3ciumUAQ9DKPz5RptvTbS4ULJeIsKvBOpkmpRBVTg/exec';
+	const options = {
+  		method: 'POST',
+//  		headers: {
+//    			'Content-Type': 'application/json'
+//  		},
+  		body: JSON.stringify({
+   			"id": "aoki",
+   			"mode": "read",
+   			"value": "1"
+  		})
+	}
 
 fetch(url, options)
   .then((res) => res.json())
@@ -51,11 +66,8 @@ fetch(url, options)
     const dataStr = JSON.stringify(data)
       console.log(data)
       localStorage.setItem('localData', dataStr)
-  	document.write("<p>dataStr</p>")
-  	document.write("<p>"+dataStr+"</p>")
-  	document.write("<p>end</p>")
+  	document.write("<p>getJsonString="+dataStr+"...ok?</p>")
   })
-  	document.write("<p>JavaScriptTest5</p>");
 	
 </script>
 
