--- a/index.html
+++ b/index.html
@@ -5,47 +5,8 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>Hyper Text Markup Language</p>
-  <script>
-document.write("<p>JavaScriptTest</p>");
-</script>
-
-  <script>
-  async function fetchData(url, options) {
-	try {
-    		const response = await fetch(url, options);
-		const data = await response.json();
-	} catch (error) {
-    		console.error('Error:', error);
-	}
-  }
-  </script>
-
-  <script>
-/*
-	  document.write("<p>JavaScriptTest2</p>");
-	const url = 'https://script.google.com/macros/s/AKfycbxVRb5kOZWxAy5eJfKYqmYwTk3ciumUAQ9DKPz5RptvTbS4ULJeIsKvBOpkmpRBVTg/exec';
-	const options = {
-  		method: 'POST',
-//  		headers: {
-//    			'Content-Type': 'application/json'
-//  		},
-  		body: JSON.stringify({
-   			"id": "aoki",
-   			"mode": "read",
-   			"value": "1"
-  		})
-	}
-	const ret= fetchData(url, options);  
-	document.write("<p>res="+ret.result+"</p>");
-	document.write("<p>txt="+ret.textContent+"</p>");
-	document.write("<p>ret="+ret+"</p>");
-	document.write("<p>ret[0]="+ret[0]+"</p>");
-	document.write("<p>strret="+JSON.stringify(ret)+"</p>");
-  	document.write("<p>JavaScriptTest3</p>");
-*/
-  </script>
-<script>
+   <p>GAS JSON load Test.</p>
+ <script>
 	document.write("<p>Nowloading GAS data</p>");
 	const url = 'https://script.google.com/macros/s/AKfycbxVRb5kOZWxAy5eJfKYqmYwTk3ciumUAQ9DKPz5RptvTbS4ULJeIsKvBOpkmpRBVTg/exec';
 	const options = {
