--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	const url = 'https://script.google.com/macros/s/AKfycbxVRb5kOZWxAy5eJfKYqmYwTk3ciumUAQ9DKPz5RptvTbS4ULJeIsKvBOpkmpRBVTg/exec';
 	const options = {
   		method: 'POST',
+         	mode: 'no-cors',
+         	Content-Type : 'application/x-www-form-urlencoded',
 //  		headers: {
 //    			'Content-Type': 'application/json'
 //  		},
