--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test.</p>
+   <p>GAS JSON load Test2.</p>
  <script>
 	document.write("<p>Nowloading GAS data</p>");
 	const url = 'https://script.google.com/macros/s/AKfycbxVRb5kOZWxAy5eJfKYqmYwTk3ciumUAQ9DKPz5RptvTbS4ULJeIsKvBOpkmpRBVTg/exec';
