--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	const options = {
   		method: 'POST',
          	mode: 'no-cors',
-         	'Content-Type' : 'application/x-www-form-urlencoded',
+//         	'Content-Type' : 'application/x-www-form-urlencoded',
 //  		headers: {
 //    			'Content-Type': 'application/json'
 //  		},
