--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test3.</p>
+   <p>GAS JSON load Test4.</p>
  <script>
 	document.write("<p>Nowloading GAS data</p>");
 	const url = 'https://script.google.com/macros/s/AKfycbxVRb5kOZWxAy5eJfKYqmYwTk3ciumUAQ9DKPz5RptvTbS4ULJeIsKvBOpkmpRBVTg/exec';
 	const options = {
   		method: 'POST',
-         	mode: 'no-cors',
+//         	mode: 'no-cors',
 //         	'Content-Type' : 'application/x-www-form-urlencoded',
 //  		headers: {
 //    			'Content-Type': 'application/json'
