--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test4.</p>
+   <p>GAS JSON load Test5.</p>
  <script>
 	document.write("<p>Nowloading GAS data</p>");
 	const url = 'https://script.google.com/macros/s/AKfycbxVRb5kOZWxAy5eJfKYqmYwTk3ciumUAQ9DKPz5RptvTbS4ULJeIsKvBOpkmpRBVTg/exec';
 	const options = {
   		method: 'POST',
-//         	mode: 'no-cors',
-//         	'Content-Type' : 'application/x-www-form-urlencoded',
+         	mode: 'no-cors',
+         	'Content-Type' : 'application/x-www-form-urlencoded',
 //  		headers: {
 //    			'Content-Type': 'application/json'
 //  		},
@@ -24,14 +24,26 @@
 	}
 
 fetch(url, options)
+	/*
   .then((res) => res.json())
   .then((data) => {
     const dataStr = JSON.stringify(data)
       console.log(data)
       localStorage.setItem('localData', dataStr)
   	document.write("<p>getJsonString="+dataStr+"...ok?</p>")
+  }) */
+  .then(response => {
+    if (!response.ok) {
+      throw new Error('Network response was not ok');
+    }
+    return response.text(); // ここではtext()を使用していますが、実際にはGASのレスポンスに合わせて適宜変更してください。
   })
-	
+  .then(data => {
+    console.log(data); // 成功した場合の処理
+  })
+  .catch(error => {
+    console.error('There was a problem with your fetch operation:', error);
+  });	
 </script>
 
  </body>
