--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test6.</p>
+   <p>GAS JSON load Test7.</p>
  <script>
 	document.write("<p>Nowloading GAS data</p>");
 	const url = 'https://script.google.com/macros/s/AKfycbxVRb5kOZWxAy5eJfKYqmYwTk3ciumUAQ9DKPz5RptvTbS4ULJeIsKvBOpkmpRBVTg/exec';
@@ -40,6 +40,7 @@ fetch(url, options)
     return response.text(); // ここではtext()を使用していますが、実際にはGASのレスポンスに合わせて適宜変更してください。
   })
   .then(data => {
+  	document.write("<p>getJsonString="+data+"...ok?</p>")
     console.log(data); // 成功した場合の処理
   })
   .catch(error => {
