--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test7.</p>
+   <p>GAS JSON load Test8.</p>
  <script>
+	document.write("<p>Nowloading GAS data</p>");
+const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
+const opt = {
+  method: "POST",
+  headers: {
+    "Content-Type": "application/x-www-form-urlencoded"
+  },
+  body: "key1=value1&key2=value2"
+}
+
+fetch(url, opt)
+  .then(res => res.text())
+  .then(text => document.write("<p>getJsonString="+text+"...ok?</p>") )
+  .catch(err => console.log(err))
+
+
+	/* 
 	document.write("<p>Nowloading GAS data</p>");
 	const url = 'https://script.google.com/macros/s/AKfycbxVRb5kOZWxAy5eJfKYqmYwTk3ciumUAQ9DKPz5RptvTbS4ULJeIsKvBOpkmpRBVTg/exec';
 	const options = {
@@ -22,7 +39,7 @@
    			"value": "1"
   		})
 	}
-
+*/
 	/*
 fetch(url, options)
   .then((res) => res.json())
@@ -32,6 +49,7 @@ fetch(url, options)
       localStorage.setItem('localData', dataStr)
   	document.write("<p>getJsonString="+dataStr+"...ok?</p>")
   }) */
+	 /*
 fetch(url, options)
   .then(response => {
 //    if (!response.ok) {
@@ -46,6 +64,7 @@ fetch(url, options)
   .catch(error => {
     console.error('There was a problem with your fetch operation:', error);
   });	
+  */
 </script>
 
  </body>
