--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test8.</p>
+   <p>GAS JSON load Test A.</p>
  <script>
 	document.write("<p>Nowloading GAS data</p>");
 const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
 const opt = {
-  method: "POST",
+  method: 'POST',
   headers: {
-    "Content-Type": "application/x-www-form-urlencoded"
+    'Content-Type': 'application/x-www-form-urlencoded'
   },
-  body: "key1=value1&key2=value2"
+  body: 'key1=value1&key2=value2'
 }
 
 fetch(url, opt)
