--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
 const opt = {
   method: 'POST',
+mode: 'no-cors',
   'Content-Type': 'application/x-www-form-urlencoded',
   body: 'key1=value1&key2=value2'
 }
