--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A2.</p>
+   <p>GAS JSON load Test A3.</p>
  <script>
 	document.write("<p>Nowloading GAS data</p>");
 const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
@@ -13,7 +13,7 @@ const opt = {
   method: 'POST',
 mode: 'no-cors',
   'Content-Type': 'application/x-www-form-urlencoded',
-  body: 'key1=value1&key2=value2'
+  body: 'id=aoki&mode=read&value=1'
 }
 
 fetch(url, opt)
