--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_
 const opt = {
   method: 'POST',
 mode: 'no-cors',
-  'Content-Type': 'application/x-www-form-urlencoded',
+	headers: {
+  'Content-Type': 'application/x-www-form-urlencoded'
+	},
   body: 'id=aoki&mode=read&value=1'
 }
 
