--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A8.</p>
+   <p>GAS JSON load Test A9.</p>
  <script>
 	document.write("<p>Nowloading GAS data</p>");
 const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
@@ -20,7 +20,7 @@ mode: 'no-cors',
 
 fetch(url, opt)
   .then(res => res.text())
-	.then(text => console.log("text="+text) )
+	.then(text => console.log("text="+text+"!") )
 //	.then(text => document.write("<p>getJsonString="+text+"...ok?</p>") )
   .catch(err => console.log(err))
 
