--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ const opt = {
   method: 'POST',
 mode: 'no-cors',
 	headers: {
-  'Content-Type': 'application/x-www-form-urlencoded'
+//  'Content-Type': 'application/x-www-form-urlencoded'
+  'Content-Type': 'text/plain'
 	},
   body: 'id=aoki&mode=read&value=1'
 }
