--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A17.</p>
+   <p>GAS JSON load Test A18.</p>
  <script>
 	document.write("<p>Nowloading GAS data</p>");
 const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
+const options = {
+                method: 'POST',
+	mode: 'no-cors',
+                headers: {
+                    'Content-Type': 'text/plain' // 'Content-Type'を'text/plain'に設定
+                },
+                body: "Hello, this is plain text data" // テキスト形式のデータを送信
+            };
+
+            fetch(url, options)
+                .then(response => response.text()) // text()メソッドを使用してテキスト形式のレスポンスを取得
+                .then(data => {
+                    console.log(data);
+                    document.write("<p>getJsonString="+data+"...ok?</p>");
+                })
+                .catch(error => console.error('Error:', error));
+
+	 
 	 /*
 const opt = {
   method: 'POST',
