--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A19.</p>
+   <p>GAS JSON load Test A20.</p>
     <script>
         document.getElementById('sendRequest').addEventListener('click', function() {
 const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
@@ -17,12 +17,13 @@ const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_
                 },
                 body: "Hello, this is plain text data" // テキスト形式のデータを送信
             };
+                    document.write("fetch start");
 
             fetch(url, options)
                 .then(response => response.text()) // text()メソッドを使用してテキスト形式のレスポンスを取得
                 .then(data => {
                     console.log("data="+data+"!");
-                    document.write("data="+data+!");
+                    document.write("data="+data+"!");
                 })
                 .catch(error => console.error('Error:', error));
         });
