--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A21.</p>
+   <p>GAS JSON load Test A22.</p>
     <script>
 const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
             const options = {
                 method: 'POST',
+	mode: 'no-cors',
                 headers: {
                     'Content-Type': 'text/plain' // 'Content-Type'を'text/plain'に設定
                 },
