--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A22.</p>
+   <p>GAS JSON load Test A23.</p>
     <script>
 const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
             const options = {
                 method: 'POST',
-	mode: 'no-cors',
+//	mode: 'no-cors',
                 headers: {
-                    'Content-Type': 'text/plain' // 'Content-Type'を'text/plain'に設定
+//                    'Content-Type': 'text/plain' // 'Content-Type'を'text/plain'に設定
+         	'Content-Type' : 'application/x-www-form-urlencoded',
                 },
                 body: "Hello, this is plain text data" // テキスト形式のデータを送信
             };
