--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A28.</p>
+   <p>GAS JSON load Test A29.</p>
     <script>
 	const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
-    	const opt0 = {
+    	const opt1 = {
+		method: 'POST',
+//		mode: 'no-cors',
+                headers: {
+                    'Content-Type': 'text/plain' // 'Content-Type'を'text/plain'に設定
+         		'Content-Type' : 'application/x-www-form-urlencoded',
+                },
+		  body: 'id=aoki&mode=read&value=1'
+    	};
+    	const opt2 = {
 		method: 'POST',
 //		mode: 'no-cors',
                 headers: {
@@ -18,7 +27,7 @@
                 },
 		  body: 'id=aoki&mode=read&value=1'
     	};
-    	const opt1 = {
+    	const opt3 = {
 		method: 'POST',
 //		mode: 'no-cors',
                 headers: {
@@ -32,23 +41,23 @@
 	};
 
 	    document.write("fetch start");
-            fetch(url, opt0)
+            fetch(url, opt2)
                 .then(response => response.text()) // text()メソッドを使用してテキスト形式のレスポンスを取得
                 .then(data => {
                     document.write("text="+data+"!");
                 })
                 .catch(error => console.error('Error:', error));
-/*
-	    fetch(url, opt1)
+
+	    fetch(url, opt3)
 		.then((res) => res.json())
   		.then((data) => {
     			const dataStr = JSON.stringify(data)
       			localStorage.setItem('localData', dataStr)
-  			document.write("<p>getJsonString="+dataStr+"...ok?</p>")
+  			document.write("<p>json="+dataStr+"!</p>")
                 })
                 .catch(error => console.error('Error:', error));
-		*/
-    </script>
+
+	</script>
  
  <script>
 	 /*
