--- a/index.html
+++ b/index.html
@@ -6,26 +6,24 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A29.</p>
+   <p>GAS JSON load Test A30.</p>
     <script>
 	const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
     	const opt1 = {
 		method: 'POST',
 //		mode: 'no-cors',
                 headers: {
-                    'Content-Type': 'text/plain' // 'Content-Type'を'text/plain'に設定
-         		'Content-Type' : 'application/x-www-form-urlencoded',
+	    		'Content-Type': 'text/plain',
                 },
-		  body: 'id=aoki&mode=read&value=1'
+		body: 'id=aoki&mode=read&value=1'
     	};
     	const opt2 = {
 		method: 'POST',
 //		mode: 'no-cors',
                 headers: {
-//                    'Content-Type': 'text/plain' // 'Content-Type'を'text/plain'に設定
          		'Content-Type' : 'application/x-www-form-urlencoded',
                 },
-		  body: 'id=aoki&mode=read&value=1'
+		body: 'id=aoki&mode=read&value=1'
     	};
     	const opt3 = {
 		method: 'POST',
