--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A30.</p>
+   <p>GAS JSON load Test A31.</p>
     <script>
 	const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
     	const opt1 = {
@@ -27,7 +27,7 @@
     	};
     	const opt3 = {
 		method: 'POST',
-//		mode: 'no-cors',
+		mode: 'no-cors',
                 headers: {
          		'Content-Type' : 'application/json',
                 },
