--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 	    fetch(url, opt3)
 		.then((res) => res.json())
   		.then((data) => {
-    			const dataStr = JSON.stringify(data)
-      			localStorage.setItem('localData', dataStr)
-  			document.write("<p>json="+dataStr+"!</p>")
+    			const dataStr = JSON.stringify(data);
+//      			localStorage.setItem('localData', dataStr)
+  			document.write("<p>json="+dataStr+"!</p>");
                 })
                 .catch(error => console.error('Error:', error));
 
