--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A33.</p>
+   <p>GAS JSON load Test A34.</p>
     <script>
 	const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
     	const opt1 = {
@@ -17,20 +17,14 @@
                 },
 		body: 'id=aoki&mode=read&value=1'
     	};
-    	const opt2 = {
-		method: 'POST',
-//		mode: 'no-cors',
-                headers: {
-         		'Content-Type' : 'application/x-www-form-urlencoded',
-                },
-		body: 'id=aoki&mode=read&value=1'
-    	};
     	const opt3 = {
 		method: 'POST',
 		mode: 'no-cors',
                 headers: {
-         		'Content-Type' : 'application/json',
-                },
+//         		'Content-Type' : 'application/json',
+    "Accept": "application/json",
+    "Content-Type": "application/x-www-form-urlencoded",
+		},
   		body: JSON.stringify({
    			"id": "aoki",
    			"mode": "read",
@@ -40,8 +34,22 @@
 
 	    document.write("fetch start");
 /*	    
-            fetch(url, opt2)
-                .then(response => response.text()) // text()メソッドを使用してテキスト形式のレスポンスを取得
+  const formData = new URLSearchParams();
+  formData.append('id', 'aoki');
+  formData.append('mode', 'read');
+  formData.append('value', '1');
+     const opt2 = {
+		method: 'POST',
+//		mode: 'no-cors',
+                headers: {
+         		'Content-Type' : 'application/x-www-form-urlencoded',
+                },
+		body: 'id=aoki&mode=read&value=1'
+//    body: formData
+    };
+
+	    fetch(url, opt2)
+                .then(response => response.text())
                 .then(data => {
                     document.write("text="+data+"!");
                 })
