--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A34.</p>
+   <p>GAS JSON load Test A35.</p>
     <script>
 	const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
-    	const opt1 = {
+  const formData = new URLSearchParams();
+  formData.append('id', 'aoki');
+  formData.append('mode', 'read');
+  formData.append('value', '1');
+
+	    const opt1 = {
 		method: 'POST',
 //		mode: 'no-cors',
                 headers: {
@@ -25,11 +30,12 @@
     "Accept": "application/json",
     "Content-Type": "application/x-www-form-urlencoded",
 		},
-  		body: JSON.stringify({
-   			"id": "aoki",
-   			"mode": "read",
-   			"value": "1"
-  		})
+    body: formData
+//  		body: JSON.stringify({
+//   			"id": "aoki",
+//   			"mode": "read",
+//   			"value": "1"
+//  		})
 	};
 
 	    document.write("fetch start");
