--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
    <p>GAS JSON load Test A35.</p>
     <script>
 	const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
-  const formData = new URLSearchParams();
-  formData.append('id', 'aoki');
-  formData.append('mode', 'read');
-  formData.append('value', '1');
+	const formData = new URLSearchParams();
+	formData.append('id', 'aoki');
+	formData.append('mode', 'read');
+	formData.append('value', '1');
 
 	    const opt1 = {
 		method: 'POST',
@@ -22,28 +22,9 @@
                 },
 		body: 'id=aoki&mode=read&value=1'
     	};
-    	const opt3 = {
-		method: 'POST',
-		mode: 'no-cors',
-                headers: {
-//         		'Content-Type' : 'application/json',
-    "Accept": "application/json",
-    "Content-Type": "application/x-www-form-urlencoded",
-		},
-    body: formData
-//  		body: JSON.stringify({
-//   			"id": "aoki",
-//   			"mode": "read",
-//   			"value": "1"
-//  		})
-	};
 
 	    document.write("fetch start");
 /*	    
-  const formData = new URLSearchParams();
-  formData.append('id', 'aoki');
-  formData.append('mode', 'read');
-  formData.append('value', '1');
      const opt2 = {
 		method: 'POST',
 //		mode: 'no-cors',
@@ -61,6 +42,28 @@
                 })
                 .catch(error => console.error('Error:', error));
 */
+    	const opt3 = {
+		method: 'POST',
+		mode: 'no-cors',
+                headers: {
+//         		'Content-Type' : 'application/json',
+    			"Accept": "application/json",
+    			"Content-Type": "application/x-www-form-urlencoded",
+		},
+    		body: formData
+//  		body: JSON.stringify({
+//   			"id": "aoki",
+//   			"mode": "read",
+//   			"value": "1"
+//  		})
+	};
+	fetch(url, opt3)
+		.then((response) => response.json())
+  		.then((result) => {
+    			console.log(result); // {param1: 'hoge', param2: 'fuga'} が返ってくる
+  		})
+ 		.catch((e) => console.log(e));
+/*	    
 	    fetch(url, opt3)
 		.then(res => res.json())
   		.then(data => {
@@ -70,7 +73,7 @@
 //  			document.write("<p>json="+dataStr+"!</p>");
                 })
                 .catch(error => console.error('Error:', error));
-
+*/
 	</script>
  
  <script>
