--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A36.</p>
+   <p>GAS JSON load Test A38.</p>
     <script>
 	const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
 	const formData = new URLSearchParams();
 	formData.append('id', 'aoki');
 	formData.append('mode', 'read');
 	formData.append('value', '1');
-
+	document.write("fetch start");
+/*
 	    const opt1 = {
 		method: 'POST',
 //		mode: 'no-cors',
@@ -22,8 +23,7 @@
                 },
 		body: 'id=aoki&mode=read&value=1'
     	};
-
-	    document.write("fetch start");
+*/
 /*	    
      const opt2 = {
 		method: 'POST',
@@ -44,7 +44,7 @@
 */
     	const opt3 = {
 		method: 'POST',
-		mode: 'no-cors',
+//		mode: 'no-cors',
                 headers: {
 //         		'Content-Type' : 'application/json',
     			"Accept": "application/json",
