--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 */
     	const opt3 = {
 		method: 'POST',
-//		mode: 'no-cors',
+		mode: 'no-cors',
                 headers: {
 //         		'Content-Type' : 'application/json',
     			"Accept": "application/json",
