--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 //  		})
 	};
 	fetch(url, opt3)
-		.then((response) => response.json())
+		.then((response) => response.text())
   		.then((result) => {
 //    			console.log(result); // {param1: 'hoge', param2: 'fuga'} が返ってくる
 			document.write("json="+(JSON.stringify(result))+"!");
