--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A44.</p>
+   <p>GAS JSON load Test A45.</p>
     <script>
 	const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
 	const formData = new URLSearchParams();
@@ -47,7 +47,7 @@
 		mode: 'no-cors',
                 headers: {
 //         		'Content-Type' : 'application/json',
-    			"Accept": "application/json",
+//    			"Accept": "application/json",
     			"Content-Type": "application/x-www-form-urlencoded",
 		},
     		body: formData
