--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A56.</p>
+   <p>GAS JSON load Test A57.</p>
     <script>
 	const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
 	const formData = new URLSearchParams();
@@ -60,7 +60,7 @@
 	fetch(url, opt3)
                 .then(response => response.json())
                 .then(data => {
-                    document.write("text="+data.text+"!");
+                    document.write("text="+data.text+"!id="+data.id+"!");
 		document.write("json="+(JSON.stringify(data))+"!");
                 })
                 .catch(error => console.error('Error:', error));
