--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test A57.</p>
+   <p>GAS JSON load Test A58.</p>
     <script>
 	const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
 	const formData = new URLSearchParams();
@@ -50,12 +50,12 @@
 //    			"Accept": "application/json",
     			"Content-Type": "application/x-www-form-urlencoded",
 		},
-    		body: formData
-//  		body: JSON.stringify({
-//   			"id": "aoki",
-//   			"mode": "read",
-//   			"value": "1"
-//  		})
+//    		body: formData
+  		body: JSON.stringify({
+   			"id": "aoki",
+   			"mode": "read",
+   			"value": "1"
+  		})
 	};
 	fetch(url, opt3)
                 .then(response => response.json())
