--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
     	const opt3 = {
 		method: 'POST',
 ////		mode: 'no-cors',
-//                headers: {
+                headers: {
 ////         		'Content-Type' : 'application/json',
 ////    			"Accept": "application/json",
 //    			"Content-Type": "application/x-www-form-urlencoded",
-//		},
+	    		'Content-Type': 'text/plain',
+		},
 //    		body: formData
   		body: JSON.stringify({
    			"id": "aoki",
