--- a/index.html
+++ b/index.html
@@ -42,13 +42,10 @@
                 })
                 .catch(error => console.error('Error:', error));
 */
+	// text/plain扱いでJSONデータを送受信する
     	const opt3 = {
 		method: 'POST',
-////		mode: 'no-cors',
                 headers: {
-////         		'Content-Type' : 'application/json',
-////    			"Accept": "application/json",
-//    			"Content-Type": "application/x-www-form-urlencoded",
 	    		'Content-Type': 'text/plain',
 		},
 //    		body: formData
@@ -61,7 +58,7 @@
 	fetch(url, opt3)
                 .then(response => response.json())
                 .then(data => {
-                    document.write("text="+data.text+"!id="+data.id+"!");
+                    document.write("mode="+data.mode+"!id="+data.id+"!");
 		document.write("json="+(JSON.stringify(data))+"!");
                 })
                 .catch(error => console.error('Error:', error));
