--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test 2.</p>
+   <p>GAS JSON load Test 3.</p>
    <script>
 	const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
 	const formData = new URLSearchParams();
@@ -16,24 +16,23 @@
 
 	document.write("fetch start");
 
-	   /*	    
-     const opt2 = {
+	// x-www-form-urlencodedでデータを送り、テキストで取得する
+	const opt2 = {
 		method: 'POST',
 //		mode: 'no-cors',
                 headers: {
          		'Content-Type' : 'application/x-www-form-urlencoded',
                 },
-		body: 'id=aoki&mode=read&value=1'
-//    body: formData
-    };
-
-	    fetch(url, opt2)
+		// body: 'id=aoki&mode=read&value=1'
+		body: formData
+    	};
+	fetch(url, opt2)
                 .then(response => response.text())
                 .then(data => {
                     document.write("text="+data+"!");
                 })
                 .catch(error => console.error('Error:', error));
-*/
+
 	// text/plain扱いでJSONデータを送受信する
     	const plainToJson = {
 		method: 'POST',
