--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
 	// x-www-form-urlencodedでデータを送り、テキストで取得する
 	const opt2 = {
 		method: 'POST',
-//		mode: 'no-cors',
                 headers: {
          		'Content-Type' : 'application/x-www-form-urlencoded',
                 },
-		// body: 'id=aoki&mode=read&value=1'
-		body: formData
+		body: 'id=aoki&mode=read&value=1'
+//		body: formData
     	};
 	fetch(url, opt2)
                 .then(response => response.text())
