--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test 7.</p>
+   <p>GAS JSON load Test 8.</p>
    <script>
 	const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
 	const formData = new URLSearchParams();
@@ -17,15 +17,15 @@
 	document.write("fetch start");
 
 	// x-www-form-urlencodedでデータを送り、テキストで取得する
-	const opt2 = {
+	const urlencodedToText = {
 		method: 'POST',
                 headers: {
          		'Content-Type' : 'application/x-www-form-urlencoded',
                 },
 		body: 'id=aoki&mode=read&value=1'
-//		body: formData
+//		body: formData	// こっちでもOK
     	};
-	fetch(url, opt2)
+	fetch(url, urlencodedToText)
                 .then(response => response.text())
                 .then(data => {
                     document.write("text="+data+"!");
