--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 headers: {
          		'Content-Type' : 'application/x-www-form-urlencoded',
                 },
-		body: 'id=aoki&mode=read&value=1'
+//		body: 'id=aoki&mode=read&value=1'
+		body:'id=minami&mode=date&value=2024/4/22'
 //		body: formData	// こっちでもOK
     	};
 	fetch(url, urlencodedToText)
