--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 //   			"id": "aoki",
 //   			"mode": "read",
 //   			"value": "1"
-			"id":"minami","mode":"date","value":"2024/4/22
+			"id":"minami","mode":"date","value":"2024/4/22"
 		})
 	};
 	document.write("in="+body+"!");
