--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>HTML</h1>
-   <p>GAS JSON load Test 10.</p>
+   <p>GAS JSON load Test 11.</p>
    <script>
 	const url = 'https://script.google.com/macros/s/AKfycbzylyRc4N3mqB9uX5gNpEjIsHJ_bE_Ccikpq-ZpOm1mP4AVIkvU6lfipW_wNwd1nObA/exec';
 	const formData = new URLSearchParams();
@@ -48,7 +48,7 @@
 			"id":"minami","mode":"date","value":"2024/4/22"
 		})
 	};
-	document.write("in="+body+"!");
+	document.write("in="+plainToJson.body+"!");
 
 	fetch(url, plainToJson)
                 .then(response => response.json())
